--- a/css/variables.less
+++ b/css/variables.less
@@ -14,7 +14,7 @@ body {
 	font-family: "Arial", sans-serif;
 	color: #f7f4f1;
 	font-style: normal;
-	background-color: #292929;
+	background-color: @bg-darkgrey;
 }
 
 img {
@@ -32,25 +32,31 @@ img {
 	}
 }
 
+.reset-list() {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
 /* file outline.less */
 
 body {
-	background-color: #292929;
+	background-color: @bg-darkgrey;
 	background-size: 720px auto;
 	min-height: 750px;
 }
 
 body {
-	background-color: #292929;
+	background-color: @bg-darkgrey;
 	background-size: 1178px auto;
 }
 
 body {
-	background-color: #292929;
+	background-color: @bg-darkgrey;
 	background-size: 1391px auto;
 }
 
-@madia (min-width: 768px) {
+@madia (min-width: @tablet-width) {
 	.main-nav {
 		min-height: 70px;
 	}
@@ -64,21 +70,23 @@ body {
 }
 
 .page-header__logo {
-	height: 185px;
+	height: 85px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
 	.page-header__logo {
 		order: 2;
 		height: 400px;
 	}
 }
 
-@media (min-width: 1088px) {
+@media (min-width: @desktop-width) {
 	.page-header__logo {
-		height: 640px;
+		height: 648px;
 	}
 }
+
+/* file blocks/main-nav.less */
 
 .main-nav {
 	width: 320px;
@@ -91,7 +99,7 @@ body {
 	list-style: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
 	.main-nav {
 		width: auto;
 		margin: 0;
@@ -99,19 +107,16 @@ body {
 	.main-nav__wrapper {
 	display: flex;
 	justify-content: space-between;
-	width: 640px;
+	width: 648px;
 	margin: 0 auto;
 	}
 	.site-list {
-		width: 570px;
-	}
-	.user-list {
 		width: 60px;
 	}
 
 }
 
-@media (min-width: 1088px) {
+@media (min-width: @desktop-width) {
 	.main-nav__wrapper {
 	width: 960px;
 	}
