--- a/source/css/style.css
+++ b/source/css/style.css
@@ -37,6 +37,9 @@ img {
   overflow: hidden;
 }
 
+ul {
+	padding-left: 0px;
+}
 /* Файл blocks/page-main.less */
 .page-main--inner {
   color: #000000;
@@ -731,6 +734,9 @@ img {
 	.advantages__item--price {
 		display: none;
 	}
+	.advantages__toggles {
+		z-index: 2;
+	}
 	button.slider__toggle {
 		padding: 0px;
 		font-size: 0px;
@@ -761,6 +767,9 @@ img {
 }
 
 @media (min-width: 768px) {
+	.advantages {
+		margin-bottom: 45px;
+	}
 	.advantages__title {
 		margin: 0px;
 		text-align: left;
@@ -805,6 +814,9 @@ img {
 }
 
 @media (min-width: 1200px) {
+	.advantages {
+		margin-bottom: 100px;
+	}
 	.advantages__list {
 		display: flex;
 	}
@@ -841,7 +853,25 @@ img {
 	color: #000000;
 	background-color: #f8f5f2;
 }
-
+.news__wrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding-bottom: 30px;
+	border-bottom: 1px solid transparent;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.news__wrapper::after {
+	content: "";
+	position: absolute;
+	right: 0;
+	bottom: 0px;
+	left: 0;
+	height: 1px;
+	background: #e5ddd5;
+}
 .news__title {
 	position: relative;
 	font-size: 30px;
@@ -854,8 +884,6 @@ img {
 
 .news__list {
 	list-style: none;
-	padding-left: 20px;
-	padding-right: 20px;
 }
 
 .news__item {
@@ -896,16 +924,16 @@ time.news__date::after {
 	padding: 0px;
 }
 .news__to-all {
-	margin: 0px 20px;
+	margin: 0px;
 }
 .news__text {
 	margin-left: 20px;
 	text-align: left;
 }
-h2.news__title {
-	margin-top: 45px;
+.news {
+	position: relative;
 }
-.news__title::before {
+.news__wrapper::before {
 	content: "";
 	position: absolute;
 	top: -35px;
@@ -915,28 +943,200 @@ h2.news__title {
 	background-image: url("../img/news-tr.png");
 	background-size: 100% 35px;
 }
+.news__item:last-child {
+	display: none;
+}
+@media (max-width: 768px) {
+	.news__to-all.button {
+	flex: auto;
+	}
+}
 
 @media (min-width: 768px) {
-	h2.news__title {
-		margin-top: 90px;
+	.news__title {
+		order: 1;
+		padding-top: 50px;
+		margin: 0px;
+		max-width: 400px;
+		text-align: left;
 	}
-	.news__title::before {
+	.news__wrapper::before {
 		top: -68px;
 		height: 68px;
 		background-image: url("../img/news-tr-768.png");
 		background-size: 100% 68px;
 	}
+	.news__wrapper, {
+		margin-right: 65px;
+		margin-left: 65px;
+}
+	.news__to-all {
+		order: 1;
+		max-width: 160px;
+		margin-top: 50px;
+	}
+	.news__list {
+		order: 2;
+		display: flex;
+		justify-content: space-between;
+	}
+	.news__item {
+		width: 50%;
+		margin-right: 30px;
+	}
 }
 
 @media (min-width: 1200px) {
-	h2.news__title {
-		margin-top: 105px;
+	.news__title {
+		margin-top: 15px;
+		margin-left: 70px;
 	}
-	.news__title::before {
-		top: -68px;
-		height: 68px;
+	.news__wrapper::before {
 		background-image: url("../img/news-tr-1200.png");
-		background-size: 100% 68px;
+	}
+	.news__item:last-child {
+		display: flex;
+	}
+}
+/* ---------------------------------------------------------------- */
+/* reviews -------------------------------------------------------- */
+
+.reviews__wrapper {
+	margin: 20px;
+	margin-top: 30px;
+}
+.reviews {
+	color: #000000;
+	background-color: #f8f5f2;
+	border: 1px solid transparent;
+	border-top: 1px solid #e5ddd5;
+}
+.reviews__title {
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 35px;
+}
+.reviews__author-name {
+	margin-right: 20px;
+	font-size: 24px;
+	font-style: normal;
+	font-weight: bold;
+}
+.reviews__list {
+	margin: 0;
+	padding: 0;
+}
+.reviews__item {
+	margin: 0;
+	padding: 0;
+	margin-bottom: 30px;
+	margin-right: 20px;
+}
+.reviews__author-picture {
+	float: left;
+	margin: 0 auto;
+}
+.reviews__text {
+	margin-left: 70px;
+}
+.reviews__author-name {
+	margin-left: 20px;
+}
+.reviews__toggles button.slider__toggle {
+	padding: 0px;
+	font-size: 0px;
+	width: 8px;
+	height: 8px;
+	background-color: transparent;
+	border: 1px solid #000000;
+	transform: rotate(45deg);
+}
+
+.reviews__toggles button.slider__toggle:hover {
+	background-color: #000000;
+}
+.reviews__toggles button.slider__toggle:active {
+	background-color: #e5ddd5;
+}
+.reviews__toggles button.slider__toggle-selected {
+	background-color: #000000;
+}
+p.reviews__toggles {
+	width: 125px;
+	display: flex;
+	margin-left: 40%;
+	margin-right: 40%;
+	align-items: center;
+	justify-content: space-around;
+	position: relative;
+}
+
+
+@media (max-width: 768px) {
+	.reviews__list button {
+		display: none;
+	}
+	a.reviews__write {
+		display: none;
+	}
+}
+@media (min-width: 768px) {
+	.reviews__wrapper {
+		margin: 40px 65px;
+	}
+	.reviews__title-wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.reviews__list {
+		display: flex;
+	}
+	.reviews__list button {
+		width: 50px;
+	}
+	.reviews__item {
+		padding: 35px 50px 40px 30px;
+		margin: 0px;
+		margin-left: -1px;
+		margin-right: -1px;
+		flex: 100%;
+		border: 1px solid #e5ddd5;
+	}
+	p.reviews__toggles {
+		margin-top: -5px;
+		z-index: 2;
+		background-color: #f8f5f2;
+	}
+	button.reviews__prev::before {
+		content: "1";
+		font-size: 0px;
+		position: relative;
+		font-size: 0px;
+		top: -6px;
+		left: -6px;
+		border-top: 6px solid transparent;
+		border-bottom: 6px solid transparent;
+		border-right: 12px solid #000000;
+	}
+	.reviews__next::after {
+		content: "";
+		position: relative;
+		font-size: 0px;
+		top: -6px;
+		left: -6px;
+		border-top: 6px solid transparent;
+		border-left: 12px solid #000000;
+		border-bottom: 6px solid transparent;
+		border-right: 6px solid #000000;
+
+	}
+}
+@media (min-width: 1200px) {
+	.reviews__item {
+		margin-left: 20px;
+		margin-right: 20px;
+		padding-right: auto;
 	}
 }
 
@@ -994,6 +1194,9 @@ h2.news__title {
     padding: 0 64px;
     padding-bottom: 27px;
   }
+	.button {
+		width: 160px;
+	}
 }
 @media (min-width: 1200px) {
   .works {
